[package]
name = "async-scoped-mut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.40"
lazy_static = "1.4.0"
futures = { version = "0.3", features = ["compat"] }
rayon = "1.5.3"
tokio = { version = "0.2.5", features = ["blocking", "macros", "sync"] }
